Fix issues with css Fix alignment of logo name and ul links. Delete unnecessary div.

--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,22 @@
     color: #F9FAF8;
 }
 
+.header {
+    padding-top: 10px;
+    padding-left: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    list-style: none;
+    flex-wrap: wrap;
+}
+
 .logo {
     color: #F9FAF8;
     font-size: 24px;
-    padding: 15px;
+   
 }
+
 
 .secondary, ul {
     font-size: 18px;
@@ -20,12 +31,6 @@
     color: #F9FAF8;
 }
 
-ul {
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-around;
-    list-style: none;
-}
 
 button, .cta {
     background-color: #3882F6;
@@ -100,4 +105,5 @@ flex-direction: column;
     flex-direction: column;
     flex-grow: 0;
     max-width: 300px;
+    padding: 50px;
 }
